# NGin

./: .gitignore  .gitmodules  CMakeLists.txt  Game-engine2.vcxproj  Game-engine2.vcxproj.filters  README.md  camera.cpp  camera.h  controls.cpp  controls.h  default_values.h  engine.h  entity.cpp  entity.h  keyboard.cpp  keyboard.h  loader.cpp  loader.h  main.cpp  material.cpp  material.h  maze_world.cpp  maze_world.h  mesh.cpp  mesh.h  moving_entity.cpp  moving_entity.h  obstacle.cpp  obstacle.h  render_part.cpp  render_part.h  scene.cpp  scene.h  steering.cpp  steering.h  vehicle.cpp  vehicle.h  world.cpp  world.h
ability/: ability.h
ability/movement/: movement.cpp  movement.h
actor/: actor.cpp  actor.h  steering.cpp  steering.h
faction/: faction.cpp  faction.h
games/preview/: config.ini  meshes.ini
include/: ngin.h
render/: ground.cpp  light.cpp  outlaw.cpp  render.h  snowmen.cpp  wall.cpp
scene/: scene.cpp  scene.h
shaders/: shader.frag  shader.vert
share/ngin/shaders/: shader.frag  shader.vert
src/: camera.cpp  controls.cpp  controls.h  default_values.h  init.h  loader.cpp  loader.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  ngin.h  object3d.cpp  output.h  preview.cpp  shader.cpp  window.cpp
